fix: breadcrumbs wrap, scroll in header menu

--- a/src/components/our-clients/our-clients.scss
+++ b/src/components/our-clients/our-clients.scss
@@ -33,7 +33,7 @@
             position: relative;
             z-index: 1;
             width: auto;
-            max-width: 250px;
+            max-width: 150px;
             height: auto;
             filter: saturate(0);
             object-position: center;
