--- a/src/components/services/services.scss
+++ b/src/components/services/services.scss
@@ -2,10 +2,11 @@
 
 .services {
     &-list {
+        row-gap: 30px;
         margin-top: 50px;
         display: flex;
-        gap: 30px;
         flex-wrap: wrap;
+        justify-content: space-between;
     }
 
     &__item {
