--- a/src/layout/header/header.scss
+++ b/src/layout/header/header.scss
@@ -1,17 +1,16 @@
 @use 'styles/utils';
 
 .header {
-    padding: 30px;
+    padding: 30px 120px;
 
     .container {
-        padding-top: 30px;
-        padding-bottom: 30px;
+        padding: 30px;
         border-radius: 20px;
         border: 1px solid hsla(0, 0%, 7%, 0.1);
     }
 
     &__logo {
-        margin-right: 59px;
+        margin-right: 35px;
         width: 100%;
         max-width: 204px;
         display: block;
@@ -47,7 +46,7 @@
 
     &__tel {
         position: relative;
-        margin: 0 70px 0 59px;
+        margin: 0 40px 0 59px;
         text-wrap: nowrap;
 
         &::before {
