--- a/src/layout/menu/menu.scss
+++ b/src/layout/menu/menu.scss
@@ -4,7 +4,7 @@
     &-list {
         row-gap: 10px;
         display: flex;
-        gap: 30px;
+        gap: 15px;
         flex-wrap: wrap;
         align-items: center;
     }
