--- a/src/styles/general/global.scss
+++ b/src/styles/general/global.scss
@@ -74,7 +74,7 @@ html {
 }
 
 .container {
-    --container-padding: 30px;
+    --container-padding: 120px;
     margin: 0 auto;
     padding: 0 var(--container-padding);
 }
