--- a/src/ui/tabs/tabs.scss
+++ b/src/ui/tabs/tabs.scss
@@ -1,10 +1,11 @@
 @use 'styles/utils';
 
 .tabs {
+    row-gap: 30px;
     margin-top: 50px;
     display: flex;
-    gap: 30px;
     flex-wrap: wrap;
+    justify-content: space-between;
 
     &__item {
         padding: 50px;
